force-app/main/default/objects/geopointe__Data_Set_Object__c/geopointe__Data_Set_Object__c.object-meta.xml
<CustomObject>
    <description>Stores information related to a Geopointe Data Set.</description>
    <label>Geopointe Data Set</label>
    <nameField>
        <label>Data Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Data Sets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>