force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Available_Maps__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Available_Maps__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When checked, this Data Set becomes available on the Map tab.</inlineHelpText>
    <label>Available (Maps)</label>
    <type>Checkbox</type>
</CustomField>