force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Child_Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Child_Filter_Logic__c</fullName>
    <description>Stores the AND/OR cross-object filter logic for queries, eg: 1 AND (2 OR 3)</description>
    <label>Child Filter Logic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>