force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Color__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Color__c</fullName>
    <defaultValue>&quot;003BFF&quot;</defaultValue>
    <inlineHelpText>The HEX color that the Data Set markers should be in</inlineHelpText>
    <label>Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>