force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Color_Marker_Date_Bin_Size__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Color_Marker_Date_Bin_Size__c</fullName>
    <label>Color Marker Date Bin Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>day</fullName>
                <default>true</default>
                <label>day</label>
            </value>
            <value>
                <fullName>week</fullName>
            </value>
            <value>
                <fullName>month</fullName>
            </value>
            <value>
                <fullName>quarter</fullName>
            </value>
            <value>
                <fullName>year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>