force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Color_Marker_Date_Rule_Generator__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Color_Marker_Date_Rule_Generator__c</fullName>
    <label>Color Marker Date Rule Generator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>auto</fullName>
                <default>true</default>
                <label>auto</label>
            </value>
            <value>
                <fullName>customRange</fullName>
            </value>
            <value>
                <fullName>dynamicRange</fullName>
            </value>
            <value>
                <fullName>ordinalDayOfWeek</fullName>
            </value>
            <value>
                <fullName>ordinalWeekOfMonth</fullName>
            </value>
            <value>
                <fullName>ordinalMonthOfYear</fullName>
            </value>
            <value>
                <fullName>ordinalQuarterOfYear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>