force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Color_Markers_By__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Color_Markers_By__c</fullName>
    <label>Color Markers By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>