force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Data_Set_Identifier__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Data_Set_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>Data Set Identifier</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>