force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Fields__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Fields__c</fullName>
    <description>Holds information related to the fields to include with the Data Set.</description>
    <label>Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>