force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Filter_Logic__c</fullName>
    <description>Stores the AND/OR filter logic for queries, eg: 1 AND (2 OR 3)</description>
    <label>Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>