force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Filters__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Filters__c</fullName>
    <description>Holds configuration for filters for Data Sets.</description>
    <label>Filters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>