force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Formatted_Address_for_Data_Table__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Formatted_Address_for_Data_Table__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When checked, the system will output a formatted address in 1 column of the data table.</inlineHelpText>
    <label>Formatted Address for Data Table</label>
    <type>Checkbox</type>
</CustomField>