force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Label_Markers_By__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Label_Markers_By__c</fullName>
    <description>Display field text at marker position (with or without icon) for this Data Set.</description>
    <label>Text Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>