force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Last_Run__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Last_Run__c</fullName>
    <description>Updated each time Data Set is used in a search.</description>
    <label>Last Run</label>
    <type>DateTime</type>
</CustomField>