force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Map_Object__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Map_Object__c</fullName>
    <inlineHelpText>The name of the map object this Data Set is based upon. The value in this field should match the value in the corresponding Map Object record (including being in lower case).</inlineHelpText>
    <label>Map Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>