force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Marker_Icon__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Marker_Icon__c</fullName>
    <description>Contains the make of the Maki icon for this Data Set.</description>
    <label>Marker Icon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>