force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Marker_Opacity__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Marker_Opacity__c</fullName>
    <description>Contains the opacity value of a marker for a Data Set.</description>
    <label>Marker Opacity</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>