force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Marker_Rules__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Marker_Rules__c</fullName>
    <description>Holds configuration for displaying markers on a map.</description>
    <label>Marker Rules</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>