force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Marker_Text__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Marker_Text__c</fullName>
    <description>Contains the text to add to the marker for this Data Set.</description>
    <label>Marker Text</label>
    <length>3</length>
    <type>Text</type>
</CustomField>