force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Marker_Type__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Marker_Type__c</fullName>
    <label>Marker Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>label</fullName>
            </value>
            <value>
                <fullName>static</fullName>
                <default>true</default>
                <label>static</label>
            </value>
            <value>
                <fullName>dynamic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>