force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Multi_Rule_Fields__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Multi_Rule_Fields__c</fullName>
    <label>Multiple Rule Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>