force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Number_of_Fields_Displayed_in_Table__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Number_of_Fields_Displayed_in_Table__c</fullName>
    <description>Sets the number of fields displayed in the table under the map.</description>
    <inlineHelpText>This value controls how many of the selected fields are displayed in the search results table under the map. For example, if &apos;5&apos; is selected, the first 5 fields the current user has access to will be displayed in the table.</inlineHelpText>
    <label>Number of Fields Displayed in Table</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>