force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Order_By_Direction__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Order_By_Direction__c</fullName>
    <inlineHelpText>Specifies whether the Order By should be done in an Ascending or Descending manner.</inlineHelpText>
    <label>Order By Direction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASC</fullName>
                <default>true</default>
                <label>ASC</label>
            </value>
            <value>
                <fullName>DESC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>