force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Order_By_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Order_By_Field__c</fullName>
    <inlineHelpText>The field that the system should order the query by when performing a query using this Data Set. If a value is not specified, the system defaults to sorting by the field you specified as the &quot;Name Field&quot; above.</inlineHelpText>
    <label>Order By Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>