force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Personal__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Personal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, this becomes a personal Data Set available only to the owner.</inlineHelpText>
    <label>Personal</label>
    <type>Checkbox</type>
</CustomField>