force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Query_Limit__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Query_Limit__c</fullName>
    <inlineHelpText>Maximum number of records to return.</inlineHelpText>
    <label>Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>