force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Refresh_Interval__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Refresh_Interval__c</fullName>
    <description>The number of seconds between automatic re-displays of the Data Set on the map.</description>
    <inlineHelpText>This value controls how often (in seconds) the data is automatically refreshed on the map.  Minimum value is 10 secords.</inlineHelpText>
    <label>Refresh Interval</label>
    <precision>8</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>