force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Report_Source_DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Report_Source_DeveloperName__c</fullName>
    <inlineHelpText>Holds the DeveloperName of the Salesforce Report used to source the Data Set.  If not blank, the Data Set will use filter and field values derived from the Report.</inlineHelpText>
    <label>Report Source DeveloperName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>