force-app/main/default/objects/geopointe__Data_Set_Object__c/fields/geopointe__Show_Filter__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Show_Filter__c</fullName>
    <description>High level ownership filter.</description>
    <label>Show Filter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>all</fullName>
                <default>true</default>
                <label>all</label>
            </value>
            <value>
                <fullName>my</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>